kubernetes/apps/mimir-system/mimir/app/security-policy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: mimir-jwt
  namespace: mimir-system
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        app: mimir
  jwt:
    providers:
      - name: authentik-grafana
        issuer: "https://auth.cloud.witl.xyz/application/o/grafana/"
        remoteJWKS:
          uri: "https://auth.cloud.witl.xyz/application/o/grafana/jwks/"
        claimToHeaders:
          - claim: tenant_id
            header: X-Scope-OrgID
      - name: authentik-observability-m2m
        issuer: "https://auth.cloud.witl.xyz/application/o/observability-m2m/"
        remoteJWKS:
          uri: "https://auth.cloud.witl.xyz/application/o/observability-m2m/jwks/"
        claimToHeaders:
          - claim: tenant_id
            header: X-Scope-OrgID
  authorization:
    defaultAction: Deny
    rules:
      - name: grafana-users-read
        action: Allow
        principal:
          jwt:
            provider: authentik-grafana
            scopes:
              - tenant
      - name: m2m-read
        action: Allow
        principal:
          jwt:
            provider: authentik-observability-m2m
            scopes:
              - mimir:read
